NEW Added   Keycloak REMOVED
RENAMED

CHANGED
  updated spring boot 3.4.2 -> 4.1.1
  and junit 4x -> 6.0.3