@@ -6,7 +6,7 @@
     <parent>
         <groupId>lakehouse</groupId>
         <artifactId>lakehouse-parent</artifactId>
-        <version>0.7.0</version>
+        <version>0.8.0</version>
     </parent>
 
     <artifactId>lakehouse-task-executor-svc</artifactId>
@@ -15,37 +15,63 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>org.lakehouse.taskexecutor.TaskExecutorApplication</start-class>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <!--spark-->
-        <spark.version>3.5.8</spark.version>
-        <scala.binary.version>2.12</scala.binary.version>
-        <iceberg-spark.version>1.8.0</iceberg-spark.version>
-
-        <hadoop.version>3.4.1</hadoop.version>
-        <jakarta-servlet.version>4.0.3</jakarta-servlet.version>
-        <jersey.version>2.36</jersey.version>
-        <!--Spark-->
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>lakehouse</groupId>
+            <artifactId>lakehouse-scheduler-rest-client</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>lakehouse</groupId>
+            <artifactId>lakehouse-common-health</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>lakehouse</groupId>
+            <artifactId>lakehouse-config-rest-client</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>lakehouse</groupId>
+            <artifactId>lakehouse-state-rest-client</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>lakehouse</groupId>
+            <artifactId>lakehouse-jinjava</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>lakehouse</groupId>
+            <artifactId>lakehouse-task-executor-api</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>lakehouse</groupId>
+            <artifactId>lakehouse-spark-rest-client</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.21.0</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>lakehouse</groupId>
-            <artifactId>lakehouse-common-health</artifactId>
-            <version>0.7.0</version>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-kafka</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,69 +85,44 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-        <dependency>
-            <groupId>lakehouse</groupId>
-            <artifactId>lakehouse-scheduler-rest-client</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>lakehouse</groupId>
-            <artifactId>lakehouse-config-rest-client</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>lakehouse</groupId>
-            <artifactId>lakehouse-state-rest-client</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>lakehouse</groupId>
-            <artifactId>lakehouse-jinjava</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>lakehouse</groupId>
-            <artifactId>lakehouse-task-executor-api</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>4.4.16</version>
         </dependency>
         <dependency>
-            <groupId>lakehouse</groupId>
-            <artifactId>lakehouse-spark-rest-client</artifactId>
-            <version>0.7.0</version>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>8.1</version>
         </dependency>
-
-        <dependency>
+        <dependency> <!--DataSetModelExecutionOnly-->
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.7.5</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>1.4.3</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>kafka</artifactId>
-            <version>1.19.3</version>
+            <version>${kafka.testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>lakehouse</groupId>
             <artifactId>lakehouse-common-test</artifactId>
-            <version>0.7.0</version>
+            <version>0.8.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -130,16 +131,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
     <build>
         <resources>
@@ -149,39 +144,32 @@
         </resources>
         <plugins>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <mainClass>${start-class}</mainClass>
-                        </manifest>
-                    </archive>
+                    <mainClass>${start-class}</mainClass>
+                    <classifier>jar-with-dependencies</classifier>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>single</goal>
+                            <goal>repackage</goal>
                         </goals>
                         <phase>package</phase>
                     </execution>
                 </executions>
             </plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.12.0</version>
                 <configuration>
-                    <argLine>
-                        --add-exports java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-opens=java.base/java.nio=ALL-UNNAMED
-                        --add-opens=java.base/java.io=ALL-UNNAMED
-                    </argLine>
+                    <show>private</show>
+                    <nohelp>true</nohelp>
                 </configuration>
             </plugin>
-
         </plugins>
-
     </build>
 </project>
